--- a/index.qmd
+++ b/index.qmd
@@ -7,8 +7,10 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
-page-layout: full
-title-block-banner: true
+page-layout: article #full
+title-block-banner: false #true
 ---
+
+
 
 
